samples/_failures_safe/1761483354_b56ab8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80b7be20.c: In function ‘main’:
./samples/SAFE/__tmp_80b7be20.c:148:12: error: missing terminating " character
  148 |     printf("\nMatrix 1
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_80b7be20.c:148:5: error: expected expression at end of input
  148 |     printf("\nMatrix 1
      |     ^~~~~~
./samples/SAFE/__tmp_80b7be20.c:148:5: error: expected declaration or statement at end of input
